test/src/e2e_vm_tests/test_programs/should_pass/language/use_absolute_path/src/trait.sw
library;

pub trait Trait {
    fn method() -> u64;
}
