test/src/e2e_vm_tests/test_programs/should_fail/repeated_trait_declaration/src/main.sw
contract;

trait MyTrait {
    fn foo() -> u64;
}

trait MyTrait {
    fn bar() -> u64;
}